Fixes to links to make them more responsive and readable

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
     --ff-secondary: 'Source Code Pro', monospace;
 
     --fw-reg: 300;
+    --fw-semi-bold: 600;
     --fw-bold: 900;
 
     --clr-light: #fff;
@@ -98,11 +99,15 @@ header {
 
 .navLink {
     color: inherit;
-    /* font-weight: var(--fw-bold); */
-    text-decoration: none; 
+    text-decoration: none;
 }
 
-.navLink:hover {
+.homeNavLink {
+    color: inherit;
+    text-decoration: none;
+}
+
+.homeNavLink:hover {
     color: var(--clr-accent);
 }
 
@@ -195,6 +200,25 @@ header {
 .projectLinks {
     display: flex;
     justify-content: space-evenly;
+}
+
+.projectLinks a {
+    color: var(--clr-dark);
+    font-weight: var(--fw-semi-bold);
+}
+
+.projectLinks a:hover {
+    color: var(--clr-light);
+}
+
+.subtitleLink {
+    color: var(--clr-dark);
+    text-decoration: none;
+}
+
+.subtitleLink:hover {
+    color: var(--clr-light);
+    text-decoration: none;
 }
 
 /* ----------Contact styles---------- */
@@ -347,6 +371,10 @@ button:hover {
         width: 50%;
         margin: 0 auto;
         padding-top: 1em;
+    }
+
+    .navLink:hover {
+        color: var(--clr-accent);
     }
 
 }
